Fix contrast issue with conjugation tables - text too light

--- a/wikipedia-dark.user.css
+++ b/wikipedia-dark.user.css
@@ -6546,6 +6546,9 @@ regexp("^https://(foundation|donate)\.wikimedia\.org.*$") {
   .list-switcher-element a[role="button"] {
     color: var(--base-color) !important;
   }
+  .NavContent > table > tbody > tr > th {
+    color: var(--gray-5);
+  }
   .HQToggle::before, .NavToggle::before, .HQToggle::after, .NavToggle::after {
     color: var(--base-color);
   }
